Fix favorite anim breaks on title change. Resize.

--- a/client/src/app/nba/player-item/player-item.component.css
+++ b/client/src/app/nba/player-item/player-item.component.css
@@ -28,7 +28,7 @@
 }
 
 .player-title h1 {
-    font-size: 32px;
+    font-size: 24px;
 }
 
 .player-title a {
